objects/Collateral_Type__c.object
<CustomObject>
    <fields>
        <fullName>Collateral_Group__c</fullName>
        <label>Collateral Group</label>
        <referenceTo>Collateral_Group__c</referenceTo>
        <relationshipLabel>Collateral Types</relationshipLabel>
        <relationshipName>Collateral_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Collateral_Purpose__c</fullName>
        <label>Collateral Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk Transfer</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Code__c</fullName>
        <externalId>true</externalId>
        <label>Credit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_to_ACM__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Push to ACM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>deprecated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Aircraft_Model_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Aircraft Model No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Aircraft_Registration_Mark__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Aircraft Registration Mark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Aircraft_Serial_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Aircraft Serial No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Bond_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Bond  Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Ceded_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Ceded Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Listed_Unlisted_Shares__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Listed Unlisted Shares</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Property_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Property Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Rank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Rank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Title_Deed_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Title Deed No</label>
        <type>Checkbox</type>
    </fields>
    <label>Collateral Type</label>
    <nameField>
        <label>Collateral Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>